[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vengeance-bot"
version = "1.0.0"
description = "Ultimate Cybersecurity Command Center with Multi-Platform Bot Integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ian Carter Kulani", email = "ian@vengeance-bot.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "cryptography>=41.0.0",
    "paramiko>=3.3.0",
    "requests>=2.31.0",
    "psutil>=5.9.5",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "rich>=13.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "discord.py>=2.3.0",
    "telethon>=1.34.0",
    "slack-sdk>=3.22.0",
    "scapy>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "bandit>=1.7.5",
    "safety>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/vengeance-bot/vengeance-bot"
Documentation = "https://vengeance-bot.readthedocs.io"
Repository = "https://github.com/vengeance-bot/vengeance-bot.git"
Issues = "https://github.com/vengeance-bot/vengeance-bot/issues"

[project.scripts]
vengeance = "vengeance:main"
vengeance-health = "healthcheck:main"
vengeance-security = "security_scan:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "test_unit.py",
    "test_integration.py",
    "test_commands.py"
]
addopts = "-ra -q --strict-markers --strict-config"
asyncio_mode = "auto"
timeout = 300

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "venv/*",
    ".venv/*",
    "*/test_*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests", "test_*"]
skips = ["B101", "B311", "B403"]